Hospital Management System/force-app/main/default/objects/fields/Address__c.field-meta.xml
<CustomField>
    <fullName>Address__c</fullName>
    <label>Address</label>
    <type>Address</type>
    <description>
        Complete residential or clinic address of the doctor including country,
        street, city, state, and postal code.
    </description>
</CustomField>