Hospital Management System/force-app/main/default/objects/fields/Approval_Status__c.field-meta.xml
<CustomField>
    <fullName>Approval_Status__c</fullName>
    <label>Approval Status</label>
    <type>Picklist</type>
    <description>
        Indicates whether the doctor record is approved for operational use.
    </description>
    <required>true</required>
    <valueSet>
        <valueSetDefinition>
            <value><fullName>Pending</fullName><default>true</default></value>
            <value><fullName>Approved</fullName><default>false</default></value>
            <value><fullName>Rejected</fullName><default>false</default></value>
        </valueSetDefinition>
    </valueSet>
</CustomField>