Hospital Management System/force-app/main/default/objects/fields/Consultation_Fees__c.field-meta.xml
<CustomField>
    <fullName>Consultation_Fees__c</fullName>
    <label>Consultation Fees</label>
    <type>Currency</type>
    <precision>10</precision>
    <scale>2</scale>
    <description>
        Standard consultation fee charged by the doctor per appointment.
    </description>
    <required>true</required>
</CustomField>