Hospital Management System/force-app/main/default/objects/fields/Specialization__c.field-meta.xml
<CustomField>
    <fullName>Specialization__c</fullName>
    <label>Specialization</label>
    <type>Picklist</type>
    <description>
        Medical specialization or department the doctor practices in.
    </description>
    <required>true</required>
    <valueSet>
        <valueSetDefinition>
            <value><fullName>Cardiology</fullName><default>false</default></value>
            <value><fullName>Orthopedic</fullName><default>false</default></value>
            <value><fullName>Pediatrics</fullName><default>false</default></value>
            <value><fullName>ENT</fullName><default>false</default></value>
        </valueSetDefinition>
    </valueSet>
</CustomField>